[package]
name = "rrh"
version = "0.1.0"
edition = "2024"

[lib]
name = "rrh"
path = "src/lib.rs"

[[bin]]
name = "rrh"
path = "src/main.rs"

[dependencies]
bytes = "1.10.1"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.1"
thiserror = "2.0.12"
tokio = {version="1.44.2", features=["full"]}
rand08 = { package = "rand", version = "0.8.5" }
x25519-dalek = "2.0"
sha1 = "0.10"
ed25519-dalek = "2.1.1"